# code-from-blog

./: LICENSE  README.md
code/transcriber/: .gitignore  environment.yml  pyproject.toml
code/transcriber/diarised_txts/: 332-kanye-ye-west-interview-lex-fridman-podcast_DIARY.srt  333-andrej-karpathy-tesla-ai-self-driving-optimus-aliens-and-agi-lex-fridman-podcast_DIARY.srt  334-abbas-amanat-iran-protests-mahsa-amini-history-cia-nuclear-weapons-lex-fridman-podcast_DIARY.srt  335-fiona-hill-vladimir-putin-and-donald-trump-lex-fridman-podcast_DIARY.srt  336-ben-shapiro-politics-kanye-trump-biden-hitler-extremism-and-war-lex-fridman-podcast_DIARY.srt  337-destiny-politics-free-speech-controversy-sex-war-and-relationships-lex-fridman-podcast_DIARY.srt  338-chamath-palihapitiya-money-success-startups-energy-poker-happiness-lex-fridman-podcast_DIARY.srt  339-climate-change-debate-bjorn-lomborg-and-andrew-revkin-lex-fridman-podcast_DIARY.srt  340-chris-tarbell-fbi-agent-who-took-down-silk-road-lex-fridman-podcast_DIARY.srt  341-guido-van-rossum-python-and-the-future-of-programming-lex-fridman-podcast_DIARY.srt  342-todd-howard-skyrim-elder-scrolls-6-fallout-and-starfield-lex-fridman-podcast_DIARY.srt  343-roger-gracie-greatest-jiu-jitsu-competitor-of-all-time-lex-fridman-podcast_DIARY.srt  344-noam-brown-ai-vs-humans-in-poker-and-games-of-strategic-negotiation-lex-fridman-podcast_DIARY.srt  345-coffeezilla-sbf-ftx-fraud-scams-fake-gurus-money-fame-and-power-lex-fridman-podcast_DIARY.srt  346-ed-calderon-mexican-drug-cartels-lex-fridman-podcast_DIARY.srt  (+17 more)
(+3 files in other folders)
